--- a/app/src/main/res/layout/fragment_edit_sequential_routine.xml
+++ b/app/src/main/res/layout/fragment_edit_sequential_routine.xml
@@ -21,55 +21,108 @@
         app:layout_constraintTop_toTopOf="parent"
         app:shapeAppearance="@style/circleImageView" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/til_EditRoutine_sequential_routineNameInputLayout"
-        style="@style/textInputDiscreteStyle"
+    <LinearLayout
+        android:id="@+id/ll_EditRoutine_sequential_routine_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/til_EditRoutine_sequential_routines_name"
+            style="@style/textInputDiscreteStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/unrelatedElementsSpacing"
+            android:layout_marginTop="50sp"
+            android:hint="@string/str_tv_EditRoutine_sequential_routineName"
+            app:boxCornerRadiusTopEnd="@dimen/dimen_textFieldCorners"
+            app:boxCornerRadiusTopStart="@dimen/dimen_textFieldCorners"
+            app:shapeAppearance="@style/textInputShape">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/et_EditRoutine_sequential_routine_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:imeOptions="actionDone"
+                android:singleLine="true"
+                android:transitionName="editRoutineRoutineName" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_EditRoutine_sequential_routines_convert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="@dimen/relatedElementsSpacing"
+            android:text="@string/str_btn_EditRoutine_sequential_convert"
+            app:cornerRadius="@dimen/dimen_btnCorners"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/til_EditRoutine_sequential_routines_name" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_EditRoutine_sequential_routines_organize"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/str_btn_EditRoutine_sequential_routines_organize"
+            app:cornerRadius="@dimen/dimen_btnCorners" />
+
+    </LinearLayout>
+
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/cv_EditRoutine_sequential_color_cardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/unrelatedElementsSpacing"
-        android:layout_marginTop="50sp"
-        android:hint="@string/str_tv_EditRoutine_sequential_routineName"
-        app:boxCornerRadiusTopEnd="@dimen/dimen_textFieldCorners"
-        app:boxCornerRadiusTopStart="@dimen/dimen_textFieldCorners"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:visibility="gone"
+        app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
+        app:layout_constraintBottom_toTopOf="@+id/cv_EditRoutine_sequential_tile_card"
         app:layout_constraintTop_toTopOf="parent"
-        app:shapeAppearance="@style/textInputShape">
+        tools:layout_editor_absoluteX="40dp">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/et_EditRoutine_sequential_routineName"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:singleLine="true"
-            android:transitionName="editRoutineRoutineName" />
+            android:layout_gravity="center"
+            android:orientation="vertical"
+            android:padding="@dimen/looselyRelatedElementsSpacing">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="@string/str_tv_EditRoutine_sequential_color_hue"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4" />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/materialButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginTop="@dimen/relatedElementsSpacing"
-        android:text="@string/str_btn_EditRoutine_sequential_convert"
-        app:cornerRadius="@dimen/dimen_btnCorners"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/til_EditRoutine_sequential_routineNameInputLayout" />
+            <com.google.android.material.slider.Slider
+                android:id="@+id/sl_EditRoutine_sequential_color_hueSlider"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:valueFrom="0"
+                android:valueTo="360" />
+
+        </LinearLayout>
+
+    </com.google.android.material.card.MaterialCardView>
 
 
     <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cv_EditRoutine_sequential_card"
+        android:id="@+id/cv_EditRoutine_sequential_tile_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/unrelatedElementsSpacing"
         android:clickable="true"
         android:elevation="10sp"
         app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius"
-        app:layout_constraintBottom_toTopOf="@+id/ll_EditRoutine_sequential_editLayout"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/materialButton">
+        app:layout_constraintTop_toTopOf="parent">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -79,7 +132,7 @@
             android:padding="30dp">
 
             <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/iv_EditRoutine_sequential_icon"
+                android:id="@+id/iv_EditRoutine_sequential_tile_icon"
                 android:layout_width="100sp"
                 android:layout_height="100sp"
                 android:background="?attr/selectableItemBackground"
@@ -93,10 +146,10 @@
                 android:layout_height="10dp" />
 
             <EditText
-                android:id="@+id/et_EditRoutine_sequential_name"
+                android:id="@+id/et_EditRoutine_sequential_tile_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:imeOptions="actionDone"
+                android:imeOptions="actionGo"
                 android:inputType="none"
                 android:maxLines="1"
                 android:text="@string/str_tv_EditRoutine_sequential_tileName"
@@ -106,7 +159,7 @@
     </com.google.android.material.card.MaterialCardView>
 
     <LinearLayout
-        android:id="@+id/ll_EditRoutine_sequential_editLayout"
+        android:id="@+id/ll_EditRoutine_sequential_cycle_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="50sp"
@@ -116,10 +169,11 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_EditRoutine_sequential_cycle_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="delete tile!"
+            android:text="@string/str_btn_EditRoutine_sequential_cycle_delete"
             app:cornerRadius="@dimen/dimen_btnCorners" />
 
         <LinearLayout
@@ -128,10 +182,10 @@
             android:layout_height="wrap_content"
             android:paddingHorizontal="@dimen/unrelatedElementsSpacing"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ll_EditRoutine_sequential_editLayout">
+            app:layout_constraintTop_toBottomOf="@+id/ll_EditRoutine_sequential_cycle_layout">
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_EditRoutine_sequential_prev"
+                android:id="@+id/btn_EditRoutine_sequential_cycle_prev"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -145,12 +199,12 @@
                 android:layout_weight="0.1" />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/btn_EditRoutine_sequential_next"
+                android:id="@+id/btn_EditRoutine_sequential_cycle_next"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:maxLines="1"
-                android:text="@string/str_btn_EditRoutine_sequential_next"
+                android:text="@string/str_btn_EditRoutine_sequential_cycle_next"
                 app:cornerRadius="@dimen/dimen_btnCorners" />
 
         </LinearLayout>
