--- a/app/src/main/res/layout/recyclerview_viewholder.xml
+++ b/app/src/main/res/layout/recyclerview_viewholder.xml
@@ -93,8 +93,9 @@
 
             <TextView
                 android:id="@+id/tv_rvItem_mode"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLines="1"
                 android:text="mode"
                 android:textSize="12sp" />
 
