--- a/app/src/main/res/layout/viewholder_small_tile.xml
+++ b/app/src/main/res/layout/viewholder_small_tile.xml
@@ -12,6 +12,7 @@
         app:cardCornerRadius="@dimen/dimen_cardViewCornerRadius">
 
         <LinearLayout
+            android:id="@+id/ll_viewholder_smallTile_cardContent"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:baselineAligned="false"
