--- a/app/src/main/res/layout/fragment_edit_continuous_routine.xml
+++ b/app/src/main/res/layout/fragment_edit_continuous_routine.xml
@@ -58,6 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/relatedElementsSpacing"
+            android:animateLayoutChanges="true"
             android:orientation="vertical">
 
             <LinearLayout
@@ -65,6 +66,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:animateLayoutChanges="true"
                 android:orientation="horizontal">
 
                 <include
@@ -88,6 +90,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:animateLayoutChanges="true"
                 android:orientation="horizontal">
 
                 <include
@@ -111,6 +114,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:animateLayoutChanges="true"
                 android:orientation="horizontal">
 
                 <include
@@ -134,6 +138,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:animateLayoutChanges="true"
                 android:orientation="horizontal">
 
                 <include
